--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "creative-portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://brad-davis.github.io/creative-portfolio",
+  "homepage": "http://bcdrom.com",
   "dependencies": {
     "cra-template": "1.2.0",
     "react": "^19.0.0",
